[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

[features]
board_qemu = []
board_k210 = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6" # 现成的伙伴算法库
spin = "0.7.0" # 提供非 std 环境下的 mutex 等工具
bitflags = "1.2.1" # 位操作
xmas-elf = "0.7.0" # elf 解析
# 驱动库：支持 VirtIO 总线架构下的块设备、网络设备、GPU 等设备
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers" } 
k210-pac = { git = "https://github.com/wyfcyx/k210-pac" }
k210-hal = { git = "https://github.com/wyfcyx/k210-hal" }
k210-soc = { git = "https://github.com/wyfcyx/k210-soc" }
easy-fs = { path = "../easy-fs" }